--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "^9.2",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "mtvs/eloquent-hashids": "^3.2",
         "owen-it/laravel-auditing": "^13.0"
     },
     "require-dev": {
